rhi: metal: Fix offscreen frame command completion wait

Does what 711c55b63226c30532b39ec8d5191330512eb2e0 did for
Vulkan, i.e. removes the there-is-more-than-one-swapchain
condition.

Fixes: QTBUG-109971
Change-Id: If631748c50482389a3ef894823a1aaf1ebb38bee
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 2305f8af9f24cd5a71e1eb7129b518ad621a1770)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>