src/gui/rhi/qrhimetal.mm
@@ -2190,15 +2190,13 @@ QRhi::FrameOpResult QRhiMetal::beginOffscreenFrame(QRhiCommandBuffer **cb, QRhi:
     Q_UNUSED(flags);
 
     currentFrameSlot = (currentFrameSlot + 1) % QMTL_FRAMES_IN_FLIGHT;
-    if (swapchains.count() > 1) {
-        for (QMetalSwapChain *sc : std::as_const(swapchains)) {
-            // wait+signal is the general pattern to ensure the commands for a
-            // given frame slot have completed (if sem is 1, we go 0 then 1; if
-            // sem is 0 we go -1, block, completion increments to 0, then us to 1)
-            dispatch_semaphore_t sem = sc->d->sem[currentFrameSlot];
-            dispatch_semaphore_wait(sem, DISPATCH_TIME_FOREVER);
-            dispatch_semaphore_signal(sem);
-        }
+    for (QMetalSwapChain *sc : std::as_const(swapchains)) {
+        // wait+signal is the general pattern to ensure the commands for a
+        // given frame slot have completed (if sem is 1, we go 0 then 1; if
+        // sem is 0 we go -1, block, completion increments to 0, then us to 1)
+        dispatch_semaphore_t sem = sc->d->sem[currentFrameSlot];
+        dispatch_semaphore_wait(sem, DISPATCH_TIME_FOREVER);
+        dispatch_semaphore_signal(sem);
     }
 
     d->ofr.active = true;
